# haikala

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/haikala/: __init__.py  __main__.py  animate.py  background.py  cli.py  glyphs.py  haiku.py  mandala.py  palette.py  symbols.py  translate.py
tests/: test_background.py  test_emanate.py  test_mandala.py  test_palette.py  test_translate.py
